--- a/Ecommerce.html
+++ b/Ecommerce.html
@@ -14,6 +14,15 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
 
+
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 	<link rel ="stylesheet" type="text/css" href="styling.css" >
 	<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
@@ -35,14 +44,17 @@
 		</div>
 
 		<div class ="search">
-		<span class="las la-search"></span>
-		<input type="search" name="" placeholder="Search products"/>
+		<form action="/action_page.php">
+      <input type="text" placeholder="Search Here.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
 	</div>
 </nav>
 
 <div class="main">
 	<div class="main_content">
-<h2>TOUCHWOOD<br><span>Purchase Incredible Home Furnitures .The categories of solid wood furniture include a dining table, dining table set, futon beds, center tables, TV Stands, wardrobe, bookshelves, sofa cum bed, bar cabinets and much more. And these ranges include enough of sub-categories for you to compare and choose the one that best suits your requirement.</span> </h2>
+<h2>TOUCHWOOD<br><br>
+	<span>Purchase Incredible Home Furnitures .The categories of solid wood furniture include a dining table, dining table set, futon beds, center tables, TV Stands, wardrobe, bookshelves, sofa cum bed, bar cabinets and much more. And these ranges include enough of sub-categories for you to compare and choose the one that best suits your requirement.<br><br>You will get every furniture here, that your home demands to you . Any thing you want to make your life and living more comfortable and classy.Who said furniture should only fulfill its purpose? You can go a mile extra with your creativity skills by mixing and matching different furniture designs to beautify your home dcor. For example, you can set up quirky benches as a seating arrangement instead of sofas in the living area and amp up the liveliness of your home. Similarly, your bedroom furniture design reflects your personality, so it is all in the way you style it, then be it a modular wardrobe or a loft bed with storage and desk functionality.<br><br> <b>Explore and Explore</b></span> </h2>
 <div class="btn">
 	<a href="service.html">Book Now</a>
 </div>
@@ -59,9 +71,9 @@
 			</div>
 		    <div class="item_content">
 				<h3>Sofa</h3>
-				<p>Your sofa set is the centre of attention in your living room furniture and the perfect spot to spend time with family or entertain guests. When shopping for sofa designs online, look for the right material, colour, and size, especially because sofa set prices vary by material and design. Explore a variety of sofa design including L-shaped, Wooden sofas, Leather & Leatherette sofa sets, Fabric designs, Sofa cum beds, Recliner and Modular sofas, Loveseats and Divans with price on Urban Ladder
-				</p>
-				<a href="#">Buy Now</a>
+				<p style>Your sofa set is the centre of attention in your living room furniture and the perfect spot to spend time with family or entertain guests. When shopping for sofa designs online, look for the right material, colour, and size, especially because sofa set prices vary by material and design. Explore a variety of sofa design including L-shaped, Wooden sofas, Leather & Leatherette sofa sets, Fabric designs, Sofa cum beds, Recliner and Modular sofas, Loveseats and Divans with price on Urban Ladder. Buy them and be happy .
+			</p>
+			<a href="#">Buy Now</a>
 			</div>
 		</div>
 
@@ -71,7 +83,7 @@
 			</div>
 		    <div class="item_content">
 				<h3>Matress</h3>
-				<p>Quick question, what is your favourite piece of furniture? Is it your luxurious bed? We thought so. Serene. Soothing. Peaceful. The perfect designer bed brings to mind these words. If you are like most people, then you want your bedroom to feel like a true sanctuary.The place you go to escape the day, recharge for tomorrow, and dream about everything that’s to come. And it all starts with picking a welcoming bed that guarantees a good night’s rest. Whether you crave a designer wooden bed or a minimalist one, 
+				<p>Quick question, what is your favourite piece of furniture? Is it your luxurious bed? We thought so. Serene. Soothing. Peaceful. The perfect designer bed brings to mind these words. If you are like most people, then you want your bedroom to feel like a true sanctuary.The place you go to escape the day, recharge for tomorrow, and dream about everything that’s to come. And it all starts with picking a welcoming bed that guarantees a good night’s rest. Whether you crave a designer wooden bed or a minimalist one, it would be beutiful to keep them.
 				</p>
 				<a href="#">Buy Now</a>
 			</div>
@@ -85,8 +97,10 @@
 			</div>
 		    <div class="item_content">
 				<h3>Almirah</h3>
-				<p>In the movie, “The Chronicles of Narnia: The Lion, the Witch and the Wardrobe”, the cupboard served as a doorway between two distinct worlds. While our bedroom cupboards may not lead to magically kingdoms, the right cupboard design sprinkles liberal amounts of pixie dust in our busy everyday lives. Whether a classic two or four-door, you need a cupboard that keeps you organized and sane. From secrets of yesteryear to utilitarian items of today, the mighty cupboard holds all.
+				<p>In the movie, “The Chronicles of Narnia: The Lion, the Witch and the Wardrobe”, the cupboard served as a doorway between two distinct worlds. While our bedroom cupboards may not lead to magically kingdoms, the right cupboard design sprinkles liberal amounts of pixie dust in our busy everyday lives. Whether a classic two or four-door, you need a cupboard that keeps you organized and sane. From secrets of yesteryear to utilitarian items of today, the mighty cupboard holds all.Buy this beautiful product now and keep your stuffs freely.
 				</p>
+
+				
 				<a href="#">Buy Now</a>
 			</div>
 		</div>
@@ -119,6 +133,7 @@
 
 		</div>
 	</div>
+	
 	<div class="product_btn">
 			<a href="service.html">Explore our Products</a>
 		</div>
@@ -215,8 +230,8 @@
 			</video>
 		</div>
 		<div class="team_content">
-			<p>In the movie, “The Chronicles of Narnia: The Lion, the Witch and the Wardrobe”, the cupboard served as a doorway between two distinct worlds. While our bedroom cupboards may not lead to magically kingdoms, the right cupboard design sprinkles liberal amounts of pixie dust in our busy everyday lives. Whether a classic two or four-door, you need a cupboard that keeps you organized and sane. From secrets of yesteryear to utilitarian items of today, the mighty cupboard holds all.</p>
-			<p>In the movie, “The Chronicles of Narnia: The Lion, the Witch and the Wardrobe”, the cupboard served as a doorway between two distinct worlds. While our bedroom cupboards may not lead to magically kingdoms, the right cupboard design sprinkles liberal amounts of pixie dust in our busy everyday lives. Whether a classic two or four-door, you need a cupboard that keeps you organized and sane. From secrets of yesteryear to utilitarian items of today, the mighty cupboard holds all.</p>
+			<p>We like to think we've put together something pretty special here at WOODSHOP - an agile group of expert designers, marketers, and developers with a shared commitment to communication, collaboration, and doing good work.We’re a diverse family here in the office. It’s that individuality that makes us a great team. It’s also that individuality that sparks some grand debates on the important subjects of literature, cinema, and where to go to lunch:)</p>
+			<p>As a company, we strive to lead with our guiding principles and to help spread ideas of sustainability and responsibility whose impact can reach far beyond our own business.</p>
 		</div>
 	</div>
 </div>
