--- a/service.html
+++ b/service.html
@@ -37,7 +37,7 @@
 			</div>
 		    <div class="item_content">
 				<h3>Sofa</h3>
-				<p>Your sofa set is the centre of attention in your living room furniture and the perfect spot to spend time with family or entertain guests. When shopping for sofa designs online, look for the right material, colour, and size, especially because sofa set prices vary by material and design. Explore a variety of sofa design including L-shaped, Wooden sofas, Leather & Leatherette sofa sets, Fabric designs, Sofa cum beds, Recliner and Modular sofas, Loveseats and Divans with price on Urban Ladder
+				<p>Your sofa set is the centre of attention in your living room furniture and the perfect spot to spend time with family or entertain guests. When shopping for sofa designs online, look for the right material, colour, and size, especially because sofa set prices vary by material and design. Explore a variety of sofa design including L-shaped, Wooden sofas, Leather & Leatherette sofa sets, Fabric designs, Sofa cum beds, Recliner and Modular sofas, Loveseats and Divans with price on Urban Ladder.Buy them and be happy .
 				</p>
 				<a href="#">Buy Now</a>
 			</div>
@@ -49,7 +49,7 @@
 			</div>
 		    <div class="item_content">
 				<h3>Matress</h3>
-				<p>Quick question, what is your favourite piece of furniture? Is it your luxurious bed? We thought so. Serene. Soothing. Peaceful. The perfect designer bed brings to mind these words. If you are like most people, then you want your bedroom to feel like a true sanctuary.The place you go to escape the day, recharge for tomorrow, and dream about everything that’s to come. And it all starts with picking a welcoming bed that guarantees a good night’s rest. Whether you crave a designer wooden bed or a minimalist one, 
+				<p>Quick question, what is your favourite piece of furniture? Is it your luxurious bed? We thought so. Serene. Soothing. Peaceful. The perfect designer bed brings to mind these words. If you are like most people, then you want your bedroom to feel like a true sanctuary.The place you go to escape the day, recharge for tomorrow, and dream about everything that’s to come. And it all starts with picking a welcoming bed that guarantees a good night’s rest. Whether you crave a designer wooden bed or a minimalist one, it would be beutiful to keep them.
 				</p>
 				<a href="#">Buy Now</a>
 			</div>
@@ -63,7 +63,7 @@
 			</div>
 		    <div class="item_content">
 				<h3>Almirah</h3>
-				<p>In the movie, “The Chronicles of Narnia: The Lion, the Witch and the Wardrobe”, the cupboard served as a doorway between two distinct worlds. While our bedroom cupboards may not lead to magically kingdoms, the right cupboard design sprinkles liberal amounts of pixie dust in our busy everyday lives. Whether a classic two or four-door, you need a cupboard that keeps you organized and sane. From secrets of yesteryear to utilitarian items of today, the mighty cupboard holds all.
+				<p>In the movie, “The Chronicles of Narnia: The Lion, the Witch and the Wardrobe”, the cupboard served as a doorway between two distinct worlds. While our bedroom cupboards may not lead to magically kingdoms, the right cupboard design sprinkles liberal amounts of pixie dust in our busy everyday lives. Whether a classic two or four-door, you need a cupboard that keeps you organized and sane. From secrets of yesteryear to utilitarian items of today, the mighty cupboard holds all.Buy this beautiful product now and keep your stuffs freely.
 				</p>
 				<a href="#">Buy Now</a>
 			</div>
