--- a/about.html
+++ b/about.html
@@ -22,31 +22,35 @@
 			<a href="Ecommerce.html">Login/Register</a>
 		</div>
 
-		<div class ="search">
-		<span class="las la-search"></span>
-		<input type="search" name="" placeholder="Search products"/>
+			<div class ="search">
+		<form action="/action_page.php">
+      <input type="text" placeholder="Search Here.." name="search">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
 	</div>
 </nav>
+
+
 <div class="about_us">
 	<h2>About us</h2>
-	<div class="about_content">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div>
-	<hr>
-	<h2>Our Mission</h2>	
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<div class="about_container">
+	  <div class="about_img">
+			<img src="https://images.creativemarket.com/0.1.0/ps/9235935/1820/1213/m1/fpnw/wm1/avwo5vrguwr0hbifqz9o2f3lsots1acv4he0qxs0zwfree1xafxs1esn6ocz8wn0-.jpg?1603090680&s=0d21bf32aad3868594859d39e8d4f3a8">
+		</div>
+		<div class="about_content">
+			<h2>Our Vision</h2>
+	   <p>"We believe that we are on the face of the earth to make great products and that's not changing. We are constantly focusing on innovating. We believe in the simple not the complex. We believe that we need to own and control the primary technologies behind the products that we make, and participate only in markets where we can make a significant contribution. We believe in saying no to thousands of projects, so that we can really focus on the few that are truly important and meaningful to us !"</p>
+	   <br><br><br>
+	
+	 
+	   <h2>Our Mission</h2>	
+		<p>“To be Earth’s most customer-centric company, where customers can find and discover anything they might want to buy online, and endeavors to offer its customers the lowest possible prices.”</p>
+   </div>
+ </div>
+ </div>
+ <br><br>
 
-</div>
+</hr>
 
 
 
